src/components/App.css
/* ... */
.Links img {
  width: 8vh;
  height: 8vh;
  transform: scale(0.8);
  border-radius: 50%;
  padding-left: 2vw;
  padding-right: 2vw;
  object-fit: cover;
}

.Links.reveal {
  transform: translateY(0);
  opacity: 1;
  transition-delay: 2s;
  transition: all ease-in 1.5s;
}

.Links img:hover {
  transform: scale(1);
}

.Profile {
  margin-right: 5vh;
  margin-left: 15vh;
}

.Projects {
  position: relative;
  left: 0;
  min-height: 150vh;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: 1.5vw;
  font-family: Outfit;
  font-weight: bold;
  z-index: -1;
}

.Project-header {
  background-color: rgb(210, 179, 184);
  position: relative;
  font-size: 3vw;
}

.Projects h1 {
  margin: 0;
  padding: 5vh;
}

.Project-spacer {
  min-height: 90vh;
  background-color: rgb(210, 179, 184);
}

.Project-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.Project-container.first {
  background-color: rgb(210, 179, 184);
}

.Project-container.second {
  background-color: #d8cfca;
  min-height: 70vh;
  padding-bottom: 30vh;
  position: relative;
  z-index: 1;
  overflow: visible;
}

.Project-container.second::before, .Project-container.second::after {
  content: '';
  position: absolute;
  top: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  background: inherit;
  transform-origin: left top;
  transform: skewY(-10deg);
}

.Project {
  position: relative;
  top: 0;
  left: 0;
  width: 50vh;
  height: 50vh;
  background-color: white;
  margin: 10vh;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 10%;
  text-align: center;
  z-index: 5;
}

.Project-name {
  transform: translateY(50%);
}

.Project:hover .Project-name {
  transform: translateY(10%);
  transition: 1s;
}

.Project:hover .Project-content{
  transform: translateY(0%);
  opacity: 1;
  transition: 1s;
  text-align: center;
}

.Project-content {
  color: #403d3b;
  transform: translateY(50%);
  opacity: 0;
  text-align: center;
  overflow-wrap: break-word;
}

.Project-content > p {
  padding-left: 2vh;
  padding-right: 2vh;
  font-size: 1.2vw;
}

.Project-content > button {
  text-decoration: none;
  color: white;
  background-color: #403d3b;
  font-family: Outfit;
  padding: 2vh;
  position: relative;
  transform: scaleX(1);
  transform: scaleY(1);
}

.Project-content > button:hover {
  background-color: rgb(176, 144, 149);
  color: #403d3b;
  cursor: pointer;
}

.Project-modal {
  position: relative;
  margin: 8vh;
  padding: 10vh;
  height: 65vh;
  background-color: white;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  font-family: Outfit;
  z-index: 100;
  overflow-y: auto;
}

.Project-modal button {
  position: absolute;
  top: 0;
  right: 0;
  width: 5vh;
  background: white;
  border: white;
  padding: 1vh;
  font-size: 1.5vw;
  font-family: Outfit;
  font-weight: bolder;
}

.Project-modal button:hover {
  cursor: pointer;
}

.Project-content .border {
  position: absolute;
  left: 0;
  background-color: #403d3b;
}

.Project-modal a:link {
  color: #403d3b;
  text-decoration: none;
}

.Project-modal a:visited {
  color: #403d3b;
}

.Project-content .border-top,
.Project-content .border-bottom {
  width: 100%;
  height: 0.8vh;
  left: 0;
  transform: scaleX(0);
}
.Project-content .border-left,
.Project-content .border-right {
  width: 0.8vh;
  height: 100%;
  transform: scaleY(0);
}
.Project-content .border-top,
.Project-content .border-left,
.Project-content .border-right {
  top: 0;
}
.Project-content .border-bottom {
  bottom: 0;
  transform-origin: bottom right;
}
.Project-content .border-top {
  transform-origin: top left;
}
.Project-content .border-left {
  transform-origin: bottom left;
}
.Project-content .border-right {
  left: auto;
  right: 0;
  transform-origin: top right;
}
.Project-content .border {
  transition: transform 0.8s ease-in-out;
}
.Project-content button:hover .border-top,
.Project-content button:hover .border-bottom {
  transform: scaleX(1);
}
.Project-content button:hover .border-left,
.Project-content button:hover .border-right {
  transform: scaleY(1);
}
.Project-content button:hover .border-left {
  transform-origin: top left;
}
.Project-content button:hover .border-right,
.Project-content button:hover .border-bottom {
  transform-origin: bottom right;
}
.Project-content[data-animation="diagonal"] a:hover [class^=border]{
  transition-delay: 0s;
}

.Contact {
  position: absolute;
  top: -30vh;
  left: 5vw;
  right: 5vw;
  min-height: 50vh;
  width: 90vw;
  background-color: #f6e5d0;
  padding-top: 8vh;
  padding-bottom: 8vh;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  align-items: center;
  justify-content: center;
  text-align: center;
  border-radius: 30px;
}

.Contact > h1 {
  font-family: Outfit;
  text-align: center;
  transform: translateY(50%);
  opacity: 0;
}

.Contact form {
  width: 50%;
  font-family: Outfit;
  display: inline-block;
  transform: translateY(30%);
  opacity: 0;
}

.Contact form.reveal, h1.reveal{
  transform: translateY(0%);
  opacity: 1;
  transition: all ease-in 1s;
}

.Contact input[type=text], input[type=email] { 
  margin-bottom: 3vh;
  width: 100%;
  padding: 1vh;
  font-family: Outfit;
  border-radius: 15px;
  border-width: 1px;
}

.Contact textarea {
  padding: 2vh;
  width: 98%;
  font-family: Outfit;
  margin-bottom: 2vh;
  border-radius: 15px;
}

.Contact input[type=submit] {
  background-color: #b9b1ad;
  color: white;
  width: 104%;
  padding: 1.5vh;
  text-align: center;
  font-family: Outfit;
  border: none;
  color: #403d3b;
  border-radius: 15px;
}

.Contact input[type=submit]:hover {
  background-color: #403d3b;
  color: white;
  cursor: pointer;
}

.Footer-spacer {
  min-height: 40vh;
}

.Footer {
  text-align: center;
  display: flex;
  flex-direction: column;
  z-index: -1;
  position: relative;
  min-height: 50vh;
}
/* ... */

